// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata rendering 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    Regexper
  </title>
</HelmetWrapper>
`;

exports[`Metadata rendering with a title 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    Regexper - Testing
  </title>
</HelmetWrapper>
`;
